syntax = "proto3";
import "google/protobuf/empty.proto";
import "common.proto";
package com.example.generated;

option java_multiple_files = true;

message RegistrationRequest{
  string email = 1;
  string password = 2;
}

message LoginRequest{
  string email = 1;
  string password = 2;
}

message LoginResponse{
  string accessToken = 1;
  string refreshToken = 2;
  ApiResponse apiResponse= 3;
}


message RefreshRequest{
  string refreshToken = 1;
}

message RefreshResponse{
  string accessToken = 1;
  string refreshToken = 2;
  ApiResponse response = 3;
}

message DeleteRequest{
  uint64  userId = 1;
}


message ChangePasswordRequest{
  string password = 1;
  string newPassword = 2;
  uint64 userId = 3;
}

message ChangeEmailRequest{
  string newEmail = 1;
  uint64 userId = 2;
}

message AssignRoleRequest{
  uint64 userId =1 ;
  RoleName role_name = 2;
}

message RevokeRoleRequest{
  uint64 userId =1 ;
  RoleName role_name = 2;
}

message DisableUserRequest {
  uint64 user_id = 1;
}

message LogoutRequest{
  uint64 userId = 1;
}


enum RoleName {
  ROLE_USER = 0;
  ROLE_WORKER = 1;
  ROLE_ADMIN = 2;
}

service AuthService{
  rpc register(RegistrationRequest) returns (ApiResponse);
  rpc login(LoginRequest) returns (LoginResponse);
  rpc changePassword(ChangePasswordRequest) returns (ApiResponse);
  rpc changeEmail(ChangeEmailRequest) returns (ApiResponse);
  rpc deleteUser(DeleteRequest) returns (ApiResponse);
  rpc assignRole(AssignRoleRequest) returns (ApiResponse);
  rpc revokeRole(RevokeRoleRequest) returns (ApiResponse);
  rpc enableDisableUser(DisableUserRequest) returns (ApiResponse);
  rpc refresh(RefreshRequest) returns (RefreshResponse);
  rpc logout(LogoutRequest) returns (ApiResponse);
}
